add windows machines to ops-agent test

--- a/molecule/ops-agent-test/molecule.yml
+++ b/molecule/ops-agent-test/molecule.yml
@@ -82,6 +82,24 @@ platforms:
     size_gb: 40
     groups:
       - sles
+  - name: "ansible-windows-2012-${MOLECULE_SCENARIO_NAME}"
+    image_family: projects/windows-cloud/global/images/family/windows-2012-r2
+    machine_type: e2-medium
+    size_gb: 40
+    groups:
+      - windows
+  - name: "ansible-windows-2016-${MOLECULE_SCENARIO_NAME}"
+    image_family: projects/windows-cloud/global/images/family/windows-2016
+    machine_type: e2-medium
+    size_gb: 40
+    groups:
+      - windows
+  - name: "ansible-windows-2019-${MOLECULE_SCENARIO_NAME}"
+    image_family: projects/windows-cloud/global/images/family/windows-2019
+    machine_type: e2-medium
+    size_gb: 40
+    groups:
+      - windows
 provisioner:
   name: ansible
   playbooks:
