--- a/molecule/ops-agent-test/molecule.yml
+++ b/molecule/ops-agent-test/molecule.yml
@@ -16,33 +16,42 @@ lint: |
   yamllint .
   # TODO(rmoriar1): add back the ansible-lint routine once an updated version is available on the GCP_UBUNTU VM.
 platforms:
-  - name: "ansible-windows-2012-test"
-    image_family: projects/windows-cloud/global/images/family/windows-2012-r2
-    machine_type: e2-medium
-    size_gb: 80
-    groups:
-      - windows
+#  - name: "ansible-windows-2012-test"
+#    image_family: projects/windows-cloud/global/images/family/windows-2012-r2
+#    machine_type: e2-medium
+#    size_gb: 80
+#    groups:
+#      - windows
+#      - windows-2012
   - name: "ansible-windows-2016-test"
     image_family: projects/windows-cloud/global/images/family/windows-2016
     machine_type: e2-medium
     size_gb: 80
     groups:
       - windows
+      - windows-2016
   - name: "ansible-windows-2019-test"
     image_family: projects/windows-cloud/global/images/family/windows-2019
     machine_type: e2-medium
     size_gb: 80
     groups:
       - windows
+      - windows-2019
 provisioner:
   name: ansible
   inventory:
     group_vars:
       windows:
-        ansible_user: ${SSH_USER}
+        ansible_user: test_user
         ansible_connection: winrm
         ansible_become: false
         ansible_winrm_server_cert_validation: ignore
+      windows-2012:
+        ansible_password: Q%]r7Mzdp.YD;Uy
+      windows-2016:
+        ansible_password: y5xF/@a:V=6Tv!^
+      windows-2019:
+        ansible_password: tB/lc6e|8;L>xbv
   playbooks:
     create: ../resources/playbooks/create.yml
     converge: ../resources/playbooks/converge.yml
