--- a/molecule/resources/playbooks/create.yml
+++ b/molecule/resources/playbooks/create.yml
@@ -14,8 +14,9 @@
           'instance': "{{ item.name }}",
           'address': "{{ item.networkInterfaces[0].accessConfigs[0].natIP }}",
           'user': "{{ molecule_yml.driver.ssh_user }}",
-          'port': "22",
+          'port': "5986",
           'identity_file': "{{ molecule_yml.driver.ssh_key_file }}", }
+          'connection': "winrm"
       with_items: "{{ instance_created.instances }}"
       register: instance_config_dict
       when: instance_created.changed
