--- a/molecule/resources/playbooks/destroy.yml
+++ b/molecule/resources/playbooks/destroy.yml
@@ -5,6 +5,12 @@
   gather_facts: false
 
   tasks:
+    - name: Uninstall agent
+      include_role:
+        name: "{{ lookup('env', 'MOLECULE_PROJECT_DIRECTORY') | basename }}"
+      vars:
+        package_state: absent
+
     - name: Delete instance
       include_tasks: ./delete_instance.yml
       loop: "{{ molecule_yml.platforms }}"
