--- a/vars/main.yml
+++ b/vars/main.yml
@@ -14,5 +14,7 @@ ops-agent_config_path: /etc/google-cloud-ops-agent/config.yaml
 ops-agent_validation_cmd: '/opt/google-cloud-ops-agent/subagents/collectd/sbin/collectd -tC %s'
 
 windows_logging_service_name: StackdriverLogging
+windows_logging_config_path: 'C:\Program Files (x86)\Stackdriver\LoggingAgent\fluent.conf'
 
 windows_ops-agent_service_name: google-cloud-ops-agent
+windows_ops-agent_config_path: 'C:\Program Files\Google\Cloud Operations\Ops Agent\config\config.yaml'
