--- a/molecule/resources/playbooks/delete_instance.yml
+++ b/molecule/resources/playbooks/delete_instance.yml
@@ -9,4 +9,4 @@
     service_account_file: "{{ molecule_yml.driver.gcp_service_account_key }}"
   register: instance
   # Don't tear down windows instances, since they require manual setup.
-  when: item.image_family | regex_search('windows') | length == 0
+  when: item.image_family | regex_search('windows') == None
