--- a/molecule/resources/playbooks/create.yml
+++ b/molecule/resources/playbooks/create.yml
@@ -14,22 +14,22 @@
           'instance': "{{ item.name }}",
           'address': "{{ item.networkInterfaces[0].accessConfigs[0].natIP }}",
           'user': "{{ molecule_yml.driver.ssh_user }}",
-          'port': "22",
+          'port': "{{ '22' if item.name | regex_search('windows') == None else '5986' }}",
           'identity_file': "{{ molecule_yml.driver.ssh_key_file }}", }
       with_items: "{{ instance_created.instances }}"
       register: instance_config_dict
-      when: instance_created.changed and item.name | regex_search('windows') == None
+      when: instance_created.changed and item.name
 
-    - name: Populate instance config dict windows
-      set_fact:
-        instance_conf_dict: {
-          'instance': "{{ item.name }}",
-          'address': "{{ item.networkInterfaces[0].accessConfigs[0].natIP }}",
-          'user': "{{ molecule_yml.driver.ssh_user }}",
-          'port': "5986",
-          'connection': "winrm", }
-      with_items: "{{ instance_created.instances }}"
-      when: instance_created.changed and item.name | regex_search('windows') != None
+#    - name: Populate instance config dict windows
+#      set_fact:
+#        instance_conf_dict: {
+#          'instance': "{{ item.name }}",
+#          'address': "{{ item.networkInterfaces[0].accessConfigs[0].natIP }}",
+#          'user': "{{ molecule_yml.driver.ssh_user }}",
+#          'port': "5986",
+#          'connection': "winrm", }
+#      with_items: "{{ instance_created.instances }}"
+#      when: instance_created.changed and item.name | regex_search('windows') != None
 
     - name: Convert instance config dict to a list
       set_fact:
