set sudo to false for windows machines

--- a/molecule/resources/playbooks/converge.yml
+++ b/molecule/resources/playbooks/converge.yml
@@ -2,7 +2,7 @@
 # This playbook calls the role. Molecule will invoke this playbook with ansible-playbook and run it against an instance created by the driver.
 - name: Converge
   hosts: all
-  become: true
+  become: "{{ true if ansible_os_family != 'Windows' else false }}"
 
   tasks:
     - name: Install agent
