--- a/molecule/resources/playbooks/verify.yml
+++ b/molecule/resources/playbooks/verify.yml
@@ -2,7 +2,7 @@
 # Verify the state of the VM after the role has finished executing.
 - name: Verify
   hosts: all
-  become: true #"{{ true if ansible_os_family != 'Windows' else false }}"
+  become: true
 
 - name: Call Linux specific playbook
   include_tasks: verify_linux.yml
