surround passwords in quotes

--- a/molecule/logging-test/molecule.yml
+++ b/molecule/logging-test/molecule.yml
@@ -109,9 +109,9 @@ provisioner:
       windows:
         ansible_become: false
       windows-2016:
-        ansible_password: ${WIN_2016_PW}
+        ansible_password: "${WIN_2016_PW}"
       windows-2019:
-        ansible_password: ${WIN_2019_PW}
+        ansible_password: "${WIN_2019_PW}"
   playbooks:
     create: ../resources/playbooks/create.yml
     converge: ../resources/playbooks/converge.yml
