--- a/molecule/resources/playbooks/create.yml
+++ b/molecule/resources/playbooks/create.yml
@@ -30,7 +30,7 @@
           'port': "5986",
           'connection': "winrm", }
       with_items: "{{ instance_created.instances }}"
-      register: instance_conf_dict
+      register: instance_config_dict
       when: instance_created.changed and item.name | regex_search('windows') != None
 
     - name: Convert instance config dict to a list
