--- a/molecule/ops-agent-test/molecule.yml
+++ b/molecule/ops-agent-test/molecule.yml
@@ -11,6 +11,8 @@ driver:
   ssh_user: ${SSH_USER}
   ssh_pub_key_file: "${SSH_KEY_FILE}.pub"
   ssh_key_file: ${SSH_KEY_FILE}
+  win_2016_pw: ${WIN_2016_pw}
+  win_2019_pw: ${WIN_2019_pw}
 lint: |
   set -e
   yamllint .
