--- a/molecule/resources/playbooks/create.yml
+++ b/molecule/resources/playbooks/create.yml
@@ -20,6 +20,7 @@
 #      with_items: "{{ instance_created.instances }}"
 #      register: instance_config_dict
 #      when: instance_created.changed and item.name
+#      # test
 
     - name: Populate instance config dict windows
       set_fact:
