set ansible connection to winrm for windows

--- a/molecule/ops-agent-test/molecule.yml
+++ b/molecule/ops-agent-test/molecule.yml
@@ -36,6 +36,7 @@ provisioner:
     group_vars:
       windows:
         ansible_become: false
+        ansible_connection: 'winrm'
         ansible_winrm_server_cert_validation: 'ignore'
       windows-2016:
         ansible_password: "${WIN_2016_PW}"
