--- a/molecule/resources/playbooks/create.yml
+++ b/molecule/resources/playbooks/create.yml
@@ -14,9 +14,9 @@
           'instance': "{{ item.name }}",
           'address': "{{ item.networkInterfaces[0].accessConfigs[0].natIP }}",
           'user': "{{ molecule_yml.driver.ssh_user }}",
-          'port': "{{ '22' if item.name | regex_search('windows') == None else '5986' }}", }
+          'port': "{{ '22' if item.name | regex_search('windows') == None else '5986' }}",
 #          'identity_file': "{{ molecule_yml.driver.ssh_key_file if item.name | regex_search('windows') == None else None }}", }
-#          'connection': "{{ 'ssh' if item.name | regex_search('windows') == None else 'winrm' }}", }
+          'connection': "{{ 'ssh' if item.name | regex_search('windows') == None else 'winrm' }}", }
       with_items: "{{ instance_created.instances }}"
       register: instance_config_dict
       when: instance_created.changed and item.name
