--- a/molecule/resources/playbooks/create.yml
+++ b/molecule/resources/playbooks/create.yml
@@ -31,7 +31,7 @@
 #          'connection': "winrm", }
 #      with_items: "{{ instance_created.instances }}"
 #      register: instance_config_dict
-#      #test
+#      test
 
     - name: Convert instance config dict to a list
       set_fact:
