--- a/molecule/logging-test/molecule.yml
+++ b/molecule/logging-test/molecule.yml
@@ -119,6 +119,8 @@ provisioner:
   inventory:
     group_vars:
       linux:
+        ansible_connection: 'ssh'
+        ansible_port: 22
         ansible_ssh_private_key_file: "${SSH_KEY_FILE}"
       windows:
         ansible_become: false
