--- a/molecule/monitoring-test/molecule.yml
+++ b/molecule/monitoring-test/molecule.yml
@@ -21,75 +21,93 @@ platforms:
     machine_type: e2-medium
     size_gb: 40
     groups:
+      - linux
       - centos
   - name: "ansible-centos-8-${MOLECULE_SCENARIO_NAME}"
     image_family: projects/centos-cloud/global/images/family/centos-8
     machine_type: e2-medium
     size_gb: 40
     groups:
+      - linux
       - centos
   - name: "ansible-rhel-7-${MOLECULE_SCENARIO_NAME}"
     image_family: projects/rhel-cloud/global/images/family/rhel-7
     machine_type: e2-medium
     size_gb: 40
     groups:
+      - linux
       - rhel
   - name: "ansible-rhel-8-${MOLECULE_SCENARIO_NAME}"
     image_family: projects/rhel-cloud/global/images/family/rhel-8
     machine_type: e2-medium
     size_gb: 40
     groups:
+      - linux
       - rhel
   - name: "ansible-ubuntu-1604-${MOLECULE_SCENARIO_NAME}"
     image_family: projects/ubuntu-os-cloud/global/images/family/ubuntu-1604-lts
     machine_type: e2-medium
     size_gb: 40
     groups:
+      - linux
       - ubuntu
   - name: "ansible-ubuntu-1804-${MOLECULE_SCENARIO_NAME}"
     image_family: projects/ubuntu-os-cloud/global/images/family/ubuntu-1804-lts
     machine_type: e2-medium
     size_gb: 40
     groups:
+      - linux
       - ubuntu
   - name: "ansible-ubuntu-2004-${MOLECULE_SCENARIO_NAME}"
     image_family: projects/ubuntu-os-cloud/global/images/family/ubuntu-2004-lts
     machine_type: e2-medium
     size_gb: 40
     groups:
+      - linux
       - ubuntu
   - name: "ansible-ubuntu-2010-${MOLECULE_SCENARIO_NAME}"
     image_family: projects/ubuntu-os-cloud/global/images/family/ubuntu-2010
     machine_type: e2-medium
     size_gb: 40
     groups:
+      - linux
       - ubuntu
   - name: "ansible-debian-9-${MOLECULE_SCENARIO_NAME}"
     image_family: projects/debian-cloud/global/images/family/debian-9
     machine_type: e2-medium
     size_gb: 40
     groups:
+      - linux
       - debian
   - name: "ansible-debian-10-${MOLECULE_SCENARIO_NAME}"
     image_family: projects/debian-cloud/global/images/family/debian-10
     machine_type: e2-medium
     size_gb: 40
     groups:
+      - linux
       - debian
   - name: "ansible-sles-12-${MOLECULE_SCENARIO_NAME}"
     image_family: projects/suse-cloud/global/images/family/sles-12
     machine_type: e2-medium
     size_gb: 40
     groups:
+      - linux
       - sles
   - name: "ansible-sles-15-${MOLECULE_SCENARIO_NAME}"
     image_family: projects/suse-cloud/global/images/family/sles-15
     machine_type: e2-medium
     size_gb: 40
     groups:
+      - linux
       - sles
 provisioner:
   name: ansible
+  inventory:
+    group_vars:
+      linux:
+        ansible_connection: 'ssh'
+        ansible_port: 22
+        ansible_ssh_private_key_file: "${SSH_KEY_FILE}"
   playbooks:
     create: ../resources/playbooks/create.yml
     converge: ../resources/playbooks/converge.yml
