--- a/molecule/ops-agent-test/molecule.yml
+++ b/molecule/ops-agent-test/molecule.yml
@@ -34,9 +34,14 @@ provisioner:
   name: ansible
   inventory:
     group_vars:
+      linux:
+        ansible_connection: 'ssh'
+        ansible_port: 22
+        ansible_ssh_private_key_file: "${SSH_KEY_FILE}"
       windows:
         ansible_become: false
         ansible_connection: 'winrm'
+        ansible_port: 5986
         ansible_winrm_server_cert_validation: 'ignore'
       windows-2016:
         ansible_password: "${WIN_2016_PW}"
