--- a/molecule/logging-test/molecule.yml
+++ b/molecule/logging-test/molecule.yml
@@ -124,6 +124,8 @@ provisioner:
         ansible_ssh_private_key_file: "${SSH_KEY_FILE}"
       windows:
         ansible_become: false
+        ansible_connection: 'winrm'
+        ansible_port: 5986
         ansible_winrm_server_cert_validation: 'ignore'
       windows-2016:
         ansible_password: "${WIN_2016_PW}"
