--- a/molecule/resources/playbooks/create.yml
+++ b/molecule/resources/playbooks/create.yml
@@ -35,7 +35,7 @@
 
     - name: Convert instance config dict to a list
       set_fact:
-        instance_conf: "{{ item.results | map(attribute='ansible_facts.instance_conf_dict') | list }}"
+        instance_conf: "{{ item | map(attribute='ansible_facts.instance_conf_dict') | list }}"
       when: instance_created.changed
       with_dict: "{{ instance_config_dict_linux | combine(instance_config_dict_windows) }}"
 
