--- a/molecule/resources/playbooks/create.yml
+++ b/molecule/resources/playbooks/create.yml
@@ -8,43 +8,26 @@
       include_tasks: ./create_instance.yml
       loop: "{{ molecule_yml.platforms }}"
 
-    - name: Populate instance config dict linux
+    - name: Populate instance config dict
       set_fact:
-        instance_conf_dict_linux: {
+        instance_conf_dict: {
           'instance': "{{ item.name }}",
           'address': "{{ item.networkInterfaces[0].accessConfigs[0].natIP }}",
           'user': "{{ molecule_yml.driver.ssh_user }}",
-          'port': "22",
-          'identity_file': "{{ molecule_yml.driver.ssh_key_file if item.name | regex_search('windows') == None else None }}",
-          'connection': "ssh", }
+          'port': "{{ '22' if item.name | regex_search('windows') == None else '5986' }}",
+          'identity_file': "{{ molecule_yml.driver.ssh_key_file }}",
+          'connection': "{{ 'ssh' if item.name | regex_search('windows') == None else winrm' }}", }
       with_items: "{{ instance_created.instances }}"
-      register: instance_config_dict_linux
-      when: instance_created.changed and item.name | regex_search('windows') == None
-
-    - name: Populate instance config dict windows
-      set_fact:
-        instance_conf_dict_windows: {
-          'instance': "{{ item.name }}",
-          'address': "{{ item.networkInterfaces[0].accessConfigs[0].natIP }}",
-          'user': "{{ molecule_yml.driver.ssh_user }}",
-          'port': "5986",
-          'identity_file': None,
-          'connection': "winrm", }
-      with_items: "{{ instance_created.instances }}"
-      register: instance_config_dict_windows
-      when: instance_created.changed and item.name | regex_search('windows') != None
-
+      register: instance_config_dict
 
     - name: Convert instance config dict to a list
       set_fact:
-        instance_conf: >
-          {{ instance_config_dict_linux.results | map(attribute='ansible_facts.instance_conf_dict_linux') | union(instance_config_dict_windows.results |
-          map(attribute='ansible_facts.instance_conf_dict_windows')) | list }}
+        instance_conf: "{{ instance_config_dict.results | map(attribute='ansible_facts.instance_conf_dict') | list }}"
       when: instance_created.changed
 
     - name: Dump instance config
       copy:
-        content: "{{ instance_conf, | to_json | from_json }}"
+        content: "{{ instance_conf | to_json | from_json }}"
         dest: "{{ molecule_instance_config }}"
       when: instance_created.changed
 
