--- a/molecule/resources/playbooks/create.yml
+++ b/molecule/resources/playbooks/create.yml
@@ -16,7 +16,7 @@
           'user': "{{ molecule_yml.driver.ssh_user }}",
           'port': "{{ '22' if item.name | regex_search('windows') == None else '5986' }}",
           'identity_file': "{{ molecule_yml.driver.ssh_key_file }}",
-          'connection': "{{ 'ssh' if item.name | regex_search('windows') == None else winrm' }}", }
+          'connection': "{{ 'ssh' if item.name | regex_search('windows') == None else 'winrm' }}", }
       with_items: "{{ instance_created.instances }}"
       register: instance_config_dict
 
