--- a/molecule/resources/playbooks/create.yml
+++ b/molecule/resources/playbooks/create.yml
@@ -8,7 +8,7 @@
       include_tasks: ./create_instance.yml
       loop: "{{ molecule_yml.platforms }}"
 
-    - name: Populate instance config dict
+    - name: Populate instance config dict linux
       set_fact:
         instance_conf_dict: {
           'instance': "{{ item.name }}",
@@ -21,17 +21,17 @@
       when: instance_created.changed and item.name | regex_search('windows') == None
 
     - name: Populate instance config dict windows
-       set_fact:
-         instance_conf_dict: {
-           'instance': "{{ item.name }}",
-           'address': "{{ item.networkInterfaces[0].accessConfigs[0].natIP }}",
-           'user': "{{ molecule_yml.driver.ssh_user }}",
-           'port': "5986",
-           'password': "{{ molecule_yml.driver.win_2019_pw if item.name | regex_search('windows-2019') != None else molecule_yml.driver.win_2016_pw }}",
-           'connection': "winrm", }
-       with_items: "{{ instance_created.instances }}"
-       register: instance_config_dict
-       when: instance_created.changed and item.name | regex_search('windows') != None
+      set_fact:
+        instance_conf_dict: {
+          'instance': "{{ item.name }}",
+          'address': "{{ item.networkInterfaces[0].accessConfigs[0].natIP }}",
+          'user': "{{ molecule_yml.driver.ssh_user }}",
+          'port': "5986",
+          'password': "{{ molecule_yml.driver.win_2019_pw if item.name | regex_search('windows-2019') != None else molecule_yml.driver.win_2016_pw }}",
+          'connection': "winrm", }
+      with_items: "{{ instance_created.instances }}"
+      register: instance_config_dict
+      when: instance_created.changed and item.name | regex_search('windows') != None
 
     - name: Convert instance config dict to a list
       set_fact:
