add debug tasks

--- a/molecule/resources/playbooks/create.yml
+++ b/molecule/resources/playbooks/create.yml
@@ -33,10 +33,18 @@
       register: instance_config_dict
       when: instance_created.changed and item.name | regex_search('windows') != None
 
+    - name: debug:
+      debug:
+        msg: "{{ instance_config_dict }}"
+
     - name: Convert instance config dict to a list
       set_fact:
         instance_conf: "{{ instance_config_dict.results | map(attribute='ansible_facts.instance_conf_dict') | list }}"
       when: instance_created.changed
+
+    - name: debug:
+      debug:
+        msg: "{{ instance_conf }}"
 
     - name: Dump instance config
       copy:
