--- a/molecule/resources/playbooks/create.yml
+++ b/molecule/resources/playbooks/create.yml
@@ -17,8 +17,8 @@
           'port': "22",
           'identity_file': "{{ molecule_yml.driver.ssh_key_file }}",
           'connection': "ssh", }
-      with_items: "{{ instance_created.instances }}"
-      when: instance_created.changed and item.name | regex_search('windows') == None
+      with_items: "{{ instance_created_linux.instances }}"
+      when: instance_created_linux.changed and item.name
 
     - name: Populate instance config dict windows
       set_fact:
@@ -29,9 +29,9 @@
           'port': "5986",
           'password': "{{ molecule_yml.driver.win_2019_pw if item.name | regex_search('windows-2019') != None else molecule_yml.driver.win_2016_pw }}",
           'connection': "winrm", }
-      with_items: "{{ instance_created.instances }}"
+      with_items: "{{ instance_created_windows.instances }}"
       register: instance_config_dict
-      when: instance_created.changed and item.name | regex_search('windows') != None
+      when: instance_created_windows.changed
 
     - name: debug
       debug:
