--- a/molecule/resources/playbooks/create.yml
+++ b/molecule/resources/playbooks/create.yml
@@ -10,24 +10,26 @@
 
     - name: Populate instance config dict linux
       set_fact:
-        instance_conf_dict: {
+        instance_conf_dict: >
+          {{ instance_conf_dict|default([]) + [ {
           'instance': "{{ item.name }}",
           'address': "{{ item.networkInterfaces[0].accessConfigs[0].natIP }}",
           'user': "{{ molecule_yml.driver.ssh_user }}",
           'port': "22",
           'identity_file': "{{ molecule_yml.driver.ssh_key_file }}",
-          'connection': "ssh", }
+          'connection': "ssh", } ] }}
       with_items: "{{ instance_created_linux.instances }}"
       when: instance_created_linux.changed and item.name
 
     - name: Populate instance config dict windows
       set_fact:
-        instance_conf_dict: {
+        instance_conf_dict: >
+          {{ instance_conf_dict|default([]) + [ {
           'instance': "{{ item.name }}",
           'address': "{{ item.networkInterfaces[0].accessConfigs[0].natIP }}",
           'user': "{{ molecule_yml.driver.ssh_user }}",
           'port': "5986",
-          'connection': "winrm", }
+          'connection': "winrm", } ] }}
       with_items: "{{ instance_created_windows.instances }}"
       register: instance_config_dict
       when: instance_created_windows.changed
@@ -36,10 +38,10 @@
       debug:
         msg: "{{ instance_config_dict }}"
 
-    - name: Convert instance config dict to a list
-      set_fact:
-        instance_conf: "{{ instance_config_dict.results | map(attribute='ansible_facts.instance_conf_dict') | list }}"
-      when: instance_created.changed
+#    - name: Convert instance config dict to a list
+#      set_fact:
+#        instance_conf: "{{ instance_config_dict.results | map(attribute='ansible_facts.instance_conf_dict') | list }}"
+#      when: instance_created_linux.changed or instance_created_windows.changed
 
     - name: debug
       debug:
@@ -47,7 +49,7 @@
 
     - name: Dump instance config
       copy:
-        content: "{{ instance_conf | to_json | from_json }}"
+        content: "{{ instance_config_dict | to_json | from_json }}"
         dest: "{{ molecule_instance_config }}"
       when: instance_created.changed
 
