--- a/molecule/resources/playbooks/create.yml
+++ b/molecule/resources/playbooks/create.yml
@@ -8,6 +8,14 @@
       include_tasks: ./create_instance.yml
       loop: "{{ molecule_yml.platforms }}"
 
+    - name: debug
+      debug:
+        msg: "{{ instance_created_linux }}"
+
+    - name: debug
+      debug:
+        msg: "{{ instance_created_windows }}"
+
     - name: Populate instance config dict linux
       set_fact:
         instance_conf_dict: >
@@ -19,7 +27,7 @@
           'identity_file': "{{ molecule_yml.driver.ssh_key_file }}",
           'connection': "ssh", } ] }}
       with_items: "{{ instance_created_linux.instances }}"
-      when: instance_created_linux.changed and item.name
+      when: instance_created_linux.changed
 
     - name: Populate instance config dict windows
       set_fact:
@@ -43,15 +51,15 @@
 #        instance_conf: "{{ instance_config_dict.results | map(attribute='ansible_facts.instance_conf_dict') | list }}"
 #      when: instance_created_linux.changed or instance_created_windows.changed
 
-    - name: debug
-      debug:
-        msg: "{{ instance_conf }}"
+#    - name: debug
+#      debug:
+#        msg: "{{ instance_conf }}"
 
     - name: Dump instance config
       copy:
         content: "{{ instance_config_dict | to_json | from_json }}"
         dest: "{{ molecule_instance_config }}"
-      when: instance_created.changed
+      when: instance_created_linux.changed or instance_created_windows.changed
 
     - name: Sleep five minutes to allow GCP instances to spin up
       pause:
