--- a/molecule/resources/playbooks/create.yml
+++ b/molecule/resources/playbooks/create.yml
@@ -8,14 +8,6 @@
       include_tasks: ./create_instance.yml
       loop: "{{ molecule_yml.platforms }}"
 
-    - name: debug
-      debug:
-        msg: "{{ instance_created_linux }}"
-
-    - name: debug
-      debug:
-        msg: "{{ instance_created_windows }}"
-
     - name: Initialize instance config dict
       set_fact:
         instance_conf_dict: []
@@ -23,7 +15,7 @@
     - name: Populate instance config dict linux
       set_fact:
         instance_conf_dict: >
-          "{{ instance_conf_dict) }}" + [ {
+          "{{ instance_conf_dict }}" + [ {
           'instance': "{{ item.name }}",
           'address': "{{ item.networkInterfaces[0].accessConfigs[0].natIP }}",
           'user': "{{ molecule_yml.driver.ssh_user }}",
