--- a/molecule/resources/playbooks/create_instance1.yml
+++ b/molecule/resources/playbooks/create_instance1.yml
@@ -1,10 +1,16 @@
 ---
 # Create the ip address and disk for the instance and the instance itself.
-- name: Initialize instance facts
+- name: Initialize instance facts linux
   set_fact:
-    instance_created:
+    instance_created_linux:
       instances: []
-  when: instance_created is not defined
+  when: instance_created_linux is not defined
+
+- name: Initialize instance facts windows
+  set_fact:
+    instance_created_windows:
+      instances: []
+  when: instance_created_windows is not defined
 
 - name: Register the default network
   gcp_compute_network:
@@ -58,9 +64,16 @@
         - ansibleinventory
   register: instance
 
-- name: Update instance facts
+- name: Update instance facts linux
   set_fact:
-    instance_created:
+    instance_created_linux:
       changed: instance.changed | bool
-      instances: "{{ instance_created.instances + [ instance ] }}"
+      instances: "{{ instance_created_linux.instances + [ instance ] }}"
+  when: item.name | regex_search('windows') == None
 
+- name: Update instance facts windows
+  set_fact:
+    instance_created_windows:
+      changed: instance.changed | bool
+      instances: "{{ instance_created_windows.instances + [ instance ] }}"
+  when: item.name | regex_search('windows') != None
